test/Lower/residue/typo_undefined_emit_mlir.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
// RUN: not %nslc -emit=mlir %s 2>&1 | %FileCheck %s
//
// M5 US4 / FR-018 — end-to-end residue fixture per US4 acceptance
// scenario 1: NSL source with `%TYPO%` reaches the IR; the
// `NSLCheckSemanticsPass` (slot 6) emits the FROZEN diagnostic.
//
// XFAIL CLOSED 2026-05-04 by FR-037 amendment (P3 severity
// downgraded from Error to Warning) + lexer extension folding
// `%X%` residue into surrounding identifier text. The path is now:
//   1. M1 IdentSplicer: `%TYPO%` undefined → emit warning, leave
//      `buf_%TYPO%` text verbatim in the spliced output.
//   2. Lexer: tokenize `buf_%TYPO%` as a single `tk_identifier`
//      (post-amendment grammar — see lang.ebnf §13 note).
//   3. AST → MLIR visitor: `reg buf_%TYPO%;` lowers to
//      `nsl.reg "buf_%TYPO%"`.
//   4. NSLCheckSemanticsPass (slot 6): regex matches `%TYPO%` in
//      the StringAttr, emits FROZEN error, driver exits non-zero.

module ResidueTypo {
    reg buf_%TYPO%;
}

// CHECK: error: unresolved macro splice '%TYPO%' after structural expansion
